Changes since last release:

VERSION 0.6.xx
DATE xx/xx/2011
47th Alpha Release

NEWS:

NEW: [features/improvements]
+Improved Python autocompletion
+Add ability to customize spelling dictionary and behavior. Can now Ignore
spellings (per session) or Add words to the dictionary (permanent).
+Add partial support for CSS3 highlighting.

LIBRARY:
+Add new themed art resource for New Folder
+Minor extensions to file utility functions (AddFileExtension)
+Add DirectoryMonitor class to ebmlib to provide notifications to changes to
files in a directory.

BUG FIXES:
+Fix middle mouse button not closing correct tab when notebook view has been split.
+Fix some Unicode handling issues related to startup paths.
+Fix error case in updating session storage schema from older versions of application.
+Fix file filters not working with find in current directory option.
+Fix text selection foreground color in OutputBuffer derived windows.
+Fix issue with some style sheets not being able to be loaded in StyleEditor on
case sensitive file systems.
+Fix some minor cosmetic issues when running under GTK.

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.6.77
DATE 10/02/2011
46th Alpha Release

NEWS:

Just a rebuild of 0.6.76 to fix some system compatibility issues that some ran
in to while using the new Windows binaries.

#-----------------------------------------------------------------------------#

VERSION 0.6.76
DATE 10/01/2011
45th Alpha Release

NEWS:

New in this release is the new Session Manager bar for managing editing sessions.
Along with the Session Manager the session feature has had a change to its
behavior, only the Default session will automatically update. All other custom
sessions require explicit saves to configure the set of files that belong in it.
See the changelog below for details of other changes and bug fixes that are
included in this release.


NEW: [features/improvements]