@@ -70,6 +70,7 @@ LANG_MAP = {LANG_4GL    : (ID_LANG_4GL,       '_progress'),
             LANG_FERITE : (ID_LANG_FERITE, '_ferite'),
             LANG_FLAGSHIP: (ID_LANG_FLAGSHIP, '_flagship'),
             LANG_FORTH  : (ID_LANG_FORTH, '_forth'),
+            LANG_GLSL   : (ID_LANG_GLSL, '_glsl'),
             LANG_GUI4CLI : (ID_LANG_GUI4CLI,  '_gui4cli'),
             LANG_HASKELL : (ID_LANG_HASKELL,  '_haskell'),
             LANG_HAXE   : (ID_LANG_HAXE,      '_haxe'),
